<resources>
    <string name="app_name">BTFP</string>
    <string name="runString">运行</string>
    <string name="stopString">停止</string>
    <string name="jogString">点动</string>
    <string name="pushString">推电池</string>
    <string name="backString">退回</string>
    <string name="sensor1">传感器1</string>
    <string name="sensor2">传感器2</string>
    <string name="sensor3">传感器3</string>
    <string name="sensor4">退电池后</string>
    <string name="sensor5">推电池前</string>
    <string name="sensor6">马达到位</string>
    <string name="stepSpeedStr">步进马达速度</string>
    <string name="inputSpeed">请输入速度</string>
    <string name="save">保存</string>
    <string name="apply">应用</string>
    <string name="test">测试</string>
    <string name="operatorID">OperatorID:</string>
    <string name="hintID">请输入ID</string>
    <string name="themeName">BTFP WC01</string>
    <string name="finishCount">完成数量:</string>
    <string name="shell">外壳</string>
    <string name="batteryCover">电池盖</string>
    <string name="start">开始</string>
    <string name="leaveWorkPiecePosStr">放料位置</string>
    <string name="grabMaterialsPosStr">抓料位置</string>
    <string name="shellStr">外壳</string>
    <string name="sensorThemeName">传感器状态</string>
    <string name="releaseShellTv">放外壳</string>
    <string name="workPiece">工件</string>
    <string name="lockBatteryCover">锁电池盖</string>
    <string name="lockHomeStr">锁头原点</string>
    <string name="loadBatteryStr">装电池</string>
    <string name="batteryStr">电池</string>
    <string name="lackBatteryStr">欠电池</string>
    <string name="pushBatteryPosStr">气缸推位</string>
    <string name="backBatteryPosStr">气缸退位</string>
    <string name="SpinBatteryPosStr">马达转位</string>
    <string name="waterAndDispensing">点胶防水</string>
    <string name="testPosStr">测试位置</string>
    <string name="dispensing">点胶</string>
    <string name="okStr">OK</string>
    <string name="ngStr">NG</string>
    <string name="ultrasonicStr">超声波</string>
    <string name="pressHeadStr">压头原点</string>
    <string name="manulControlStr">手动控制</string>
    <string name="forwardStr">向前</string>
    <string name="homeStr">复位</string>
    <string name="torsionHeadStr">扭头</string>
    <string name="twistCapStr">扭盖</string>
    <string name="waterProofTestStr">防水测试</string>
    <string name="waterProofCoverStr">防水盖</string>
    <string name="testStartStr">测试启动</string>
    <string name="ultrasonicDispensingStr">超声波/点胶</string>
    <string name="ultrasonicStartStr">超声波启动</string>
    <string name="DispensingStartStr">点胶启动</string>
    <string name="otherStr">其它</string>
    <string name="pushBatteryStr">推电池</string>
    <string name="batterySpinStr">电池转动</string>
    <string name="batteryShellStr">电池外壳</string>
    <string name="robotTestStr">机器手测试</string>
    <string name="lockBatteryColletStr">夹头夹紧</string>
    <string name="upLimtStr">上限</string>
    <string name="downLimtStr">下限</string>
    <string name="lockCoverPosStr">锁盖位置</string>
    <string name="paraSetStr">参数设置</string>
    <string name="shellSpeedStr">外壳速度(mm/s)</string>
    <string name="batterySpeedStr">电池盖速度(mm/s)</string>
    <string name="lockBatterySpeedStr">锁电池速度(mm/s)</string>
    <string name="waterProofSpeedStr">防水速度(mm/s)</string>
    <string name="ultrasonicSpeedStr">超声波速度(mm/s)</string>
    <string name="loadBattertySpinStr">装电池转速(mm/s)</string>
    <string name="speedStr">速度</string>
    <string name="passLimitStr">传送限位</string>
    <string name="ultrasonicWorkPosStr">焊接位置</string>
    <string name="dispensingWorkPieceStr">点胶件</string>
    <string name="conveyorStr">传送带</string>
    <string name="positionStr">位置</string>
    <string name="shellPosStr">外壳位置(mm)</string>
    <string name="batteryCoverPosStr">电池盖位置(mm)</string>
    <string name="lockBatteryPosStr">锁电池盖位置(mm)</string>
    <string name="proofWaterPosStr">防水位置(mm)</string>
    <string name="ultrasonicPosStr">超声波位置(mm)</string>
    <string name="armStateStr">机器臂状态</string>
    <string name="armReadyStr">准备</string>
    <string name="armRunningStr">开始</string>
    <string name="startPosStr">起始位置</string>
    <string name="EndPosStr">终点位置</string>
    <string name="shellStartPosStr">外壳起始(mm)</string>
    <string name="batteryCoverStartPosStr">电池盖起始(mm)</string>
    <string name="proofWaterStartPosStr">防水起始(mm)</string>
    <string name="ultrasonicStartPosStr">超声波起始(mm)</string>
    <string name="shellEndPosStr">外壳终点(mm)</string>
    <string name="batteryCoverEndPosStr">电池盖终点(mm)</string>
    <string name="proofWaterEndPosStr">防水终点(mm)</string>
    <string name="ultrasonicEndPosStr">超声波终点(mm)</string>
    <string name="proofWaterStr">防水</string>
    <string name="mainArmReadyStr">手准备</string>
    <string name="mainArmStartStr">手运行</string>
    <string name="initStr">起点</string>
    <string name="endStr">终点</string>
    <string name="robotStr">机器手</string>
</resources>
