<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:paddingTop="25dp"
        android:background="#00CDCD"
        >
        <TextView
            android:id="@+id/idTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operatorID"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />
        <EditText
            android:id="@+id/idEditText"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textSize="30sp"
            android:layout_alignTop="@+id/idTextView"
            android:layout_toEndOf="@+id/idTextView"
            android:textColor="#000000"
            android:inputType="numberDecimal"
            android:labelFor="@+id/idEditText"
            />
        <TextView
            android:id="@+id/themeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/themeName"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/idEditText"
            android:paddingStart="100dp"
            android:paddingEnd="50dp"
            android:textColor="@color/fbutton_color_pomegranate"
            android:layout_alignBaseline="@+id/idEditText"
            />
        <TextView
            android:id="@+id/finishCountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/themeTextView"
            android:layout_alignBaseline="@+id/idEditText"
            android:paddingStart="100dp"
            android:paddingEnd="0dp"
            android:text="@string/finishCount"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />
        <EditText
            android:id="@+id/finishCountET"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_alignTop="@+id/finishCountTV"
            android:layout_toEndOf="@+id/finishCountTV"
            android:textColor="@color/colorPrimaryDark"
            android:inputType="numberDecimal"
            android:labelFor="@+id/finishCountET"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="horizontal"
        >
        <TableLayout
            android:layout_height="500dp"
            android:layout_width="640dp"
            android:background="#00C5CD"
            android:showDividers="beginning">
            <TableRow
                android:background="#00C5CD"
                android:paddingTop="40dp"
                android:paddingBottom="40dp"
            >
                <TextView
                    android:id="@+id/mainShellTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/shellStr"
                    android:gravity="center"
                    android:drawableTop="@drawable/tvselector"
                    />
                <TextView
                    android:id="@+id/mainBatteryTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/batteryCover"
                    android:gravity="center"
                    android:drawableTop="@drawable/tvselector"
                    />
                <TextView
                    android:id="@+id/mainUltrasonicTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ultrasonicStr"
                    android:gravity="center"
                    android:drawableTop="@drawable/tvselector"
                    />
                <TextView
                    android:id="@+id/mainLoadBatteryTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loadBatteryStr"
                    android:gravity="center"
                    android:drawableTop="@drawable/tvselector"
                    />
                <TextView
                    android:id="@+id/mainDispensingTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dispensing"
                    android:gravity="center"
                    android:drawableTop="@drawable/tvselector"
                    />
            </TableRow>
            <TableRow
                android:background="#00C5CD"
                >
                <TextView
                    android:id="@+id/mainProofWaterTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proofWaterStr"
                    android:gravity="center"
                    android:drawableTop="@drawable/tvselector"
                    />
                <TextView
                    android:id="@+id/mainOKTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/okStr"
                    android:gravity="center"
                    android:drawableTop="@drawable/tvselector"
                    />
                <TextView
                    android:id="@+id/mainNGTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ngStr"
                    android:gravity="center"
                    android:drawableTop="@drawable/tvselector"
                    />
                <TextView
                    android:id="@+id/mainRobotStartTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mainArmStartStr"
                    android:gravity="center"
                    android:drawableTop="@drawable/tvselector"
                    />
                <TextView
                    android:id="@+id/mainRobotReadyTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mainArmReadyStr"
                    android:gravity="center"
                    android:drawableTop="@drawable/tvselector"
                    />
                </TableRow>
        </TableLayout>
        <TableLayout
            android:layout_width="640dp"
            android:layout_height="500dp"
            android:background="#40E0D0"
            >
            <TableRow
                android:background="#40E0D0"
                android:paddingStart="70dp"
                android:paddingEnd="100dp"
                android:paddingTop="50dp"
                android:paddingBottom="40dp"
                >
                <TextView
                    android:id="@+id/mainUltrasonicStateTV"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ultrasonicStr"
                    android:gravity="center"
                    android:drawableTop="@drawable/tvstatesselector"
                    />
                <TextView
                    android:id="@+id/mainLoadBatteryStateTV"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/loadBatteryStr"
                    android:gravity="center"
                    android:drawableTop="@drawable/tvstatesselector"
                    />
            </TableRow>
            <TableRow
                android:background="#40E0D0"
                android:paddingStart="70dp"
                android:paddingEnd="100dp"
                >
                <TextView
                    android:id="@+id/mainDispensingStateTV"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dispensing"
                    android:gravity="center"
                    android:drawableTop="@drawable/tvstatesselector"
                    />
                <TextView
                    android:id="@+id/mainProofWaterStateTV"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/proofWaterStr"
                    android:gravity="center"
                    android:drawableTop="@drawable/tvstatesselector"
                    />
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#66CDAA"
        >
        <Button
            android:id="@+id/shell_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="100dp"
            android:text="@string/shell"
            android:textSize="20sp"
            android:textStyle="bold"
            android:drawableTop="@drawable/btnselector"
            android:background="#66CDAA"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/btnRobotStart"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="450dp"
            android:text="@string/robotStr"
            android:textSize="20sp"
            android:background="#66CDAA"
            android:textStyle="bold"
            android:drawableTop="@drawable/btn3dpress"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/btnStart"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="700dp"
            android:text="@string/start"
            android:textSize="20sp"
            android:background="#66CDAA"
            android:textStyle="bold"
            android:drawableTop="@drawable/btn3dpress"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/battery_cover_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="100dp"
            android:text="@string/batteryCover"
            android:textSize="20sp"
            android:background="#66CDAA"
            android:textStyle="bold"
            android:drawableTop="@drawable/btnselector"
            style="?android:attr/buttonBarButtonStyle"
            />
    </RelativeLayout>
</LinearLayout>