<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2B48C"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/manulControlStr"
        android:textSize="50sp"
        android:textStyle="bold"
        android:paddingStart="100dp"
        android:paddingEnd="50dp"
        />
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:background="#969696"
        android:paddingBottom="2dp"
        android:paddingStart="2dp"
        android:paddingEnd="1dp"
        android:paddingTop="5dp"
        android:layout_weight="1"
        android:shrinkColumns="0,1"
        >
        <TableRow
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:orientation="vertical"
                android:background="@drawable/side">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/shell"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="#E8E8E8"
                    >
                    <Button
                        android:id="@+id/shell_go_btn"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:drawableTop="@drawable/btnpress"
                        android:text="@string/endStr"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                    <Button
                        android:id="@+id/shell_home_btn"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:drawableTop="@drawable/btnpress"
                        android:text="@string/initStr"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:orientation="vertical"
                android:background="@drawable/side">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/batteryCover"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <Button
                        android:id="@+id/batter_go_btn"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:drawableTop="@drawable/btnpress"
                        android:text="@string/endStr"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                    <Button
                        android:id="@+id/battery_home_btn"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:drawableTop="@drawable/btnpress"
                        android:text="@string/initStr"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:orientation="vertical"
                android:background="@drawable/side">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/homeStr"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <Button
                        android:id="@+id/lock_battery_cover_go_btn"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:drawableTop="@drawable/btnpress"
                        android:text="@string/shellStr"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                    <Button
                        android:id="@+id/lock_battery_cover_home_btn"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:drawableTop="@drawable/btnpress"
                        android:text="@string/batteryCover"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                    <Button
                        android:id="@+id/torsion_head_btn"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:drawableTop="@drawable/btnpress"
                        android:text="@string/ultrasonicStr"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                    <Button
                        android:id="@+id/twist_cap_btn"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:drawableTop="@drawable/btnpress"
                        android:text="@string/proofWaterStr"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                </LinearLayout>
            </LinearLayout>
        </TableRow>
        <TableRow>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="460dp"
                android:orientation="vertical"
                android:background="@drawable/side">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/waterProofTestStr"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <Button
                        android:id="@+id/water_proof_test_go_btn"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:drawableTop="@drawable/btnpress"
                        android:text="@string/endStr"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                    <Button
                        android:id="@+id/water_proof_test_home_btn"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:drawableTop="@drawable/btnpress"
                        android:text="@string/initStr"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <Button
                        android:id="@+id/water_proof_cover_btn"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:drawableTop="@drawable/btnpress"
                        android:text="@string/waterProofCoverStr"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                    <Button
                        android:id="@+id/water_proof_test_start_btn"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:drawableTop="@drawable/btnselector"
                        android:text="@string/testStartStr"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="460dp"
                android:orientation="vertical"
                android:background="@drawable/side">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/ultrasonicDispensingStr"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <Button
                        android:id="@+id/ultrasonic_go_btn"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:drawableTop="@drawable/btnpress"
                        android:text="@string/endStr"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                    <Button
                        android:id="@+id/ultrasonic_home_btn"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:drawableTop="@drawable/btnpress"
                        android:text="@string/initStr"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <Button
                        android:id="@+id/ultrasonic_start"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:drawableTop="@drawable/btnselector"
                        android:text="@string/ultrasonicStartStr"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                    <Button
                        android:id="@+id/dispensing_start_btn"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:drawableTop="@drawable/btnselector"
                        android:text="@string/DispensingStartStr"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="460dp"
                android:orientation="vertical"
                android:background="@drawable/side">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/otherStr"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <Button
                        android:id="@+id/battery_shell_btn"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:drawableTop="@drawable/btnpress"
                        android:text="@string/batteryShellStr"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                    <Button
                        android:id="@+id/push_battery_btn"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:drawableTop="@drawable/btnpress"
                        android:text="@string/pushBatteryStr"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                    <Button
                        android:id="@+id/battery_spin_btn"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:drawableTop="@drawable/btnpress"
                        android:text="@string/batterySpinStr"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                    <Button
                        android:id="@+id/lock_battery_collet_btn"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:drawableTop="@drawable/btnpress"
                        android:text="@string/lockBatteryColletStr"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/conveyor_btn"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:drawableTop="@drawable/btnpress"
                    android:text="@string/conveyorStr"
                    style="?android:attr/buttonBarButtonStyle"
                    />
                <Button
                    android:id="@+id/robot_test2"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:drawableTop="@drawable/btnselector"
                    android:text="@string/robotTestStr"
                    style="?android:attr/buttonBarButtonStyle"
                    />
                <Button
                    android:id="@+id/robot_test3"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:drawableTop="@drawable/btnselector"
                    android:text="@string/robotTestStr"
                    style="?android:attr/buttonBarButtonStyle"
                    />
                <Button
                    android:id="@+id/robot_test4"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:drawableTop="@drawable/btnselector"
                    android:text="@string/robotTestStr"
                    style="?android:attr/buttonBarButtonStyle"
                    />
            </LinearLayout>
            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>